--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-    <script src="js/models.js"></script>
+    <script src="js/parser.js"></script>
     <title>Sigma Test</title>
 </head>
 <body ng-app="testApp">
